rust/src/nasl/syntax/snapshots/scannerlib__nasl__syntax__error__tests__missing_semicolon_assignment.snap
---
source: src/nasl/syntax/error.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_err(stringify! (missing_semicolon_assignment), \"a = 12\")"
snapshot_kind: text
---
error: Missing semicolon: a = 12
  ┌─ missing_semicolon_assignment:1:1
  │
1 │ a = 12
  │ ^ Missing semicolon: a = 12
